infrastructure/argocd-access/overlays/erauner-home/service-dns-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.erauner.dev
    external-dns.alpha.kubernetes.io/target: tunnel.erauner.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
